@@ -315,9 +315,9 @@ def merge(
             )
 
             # 4. Read data in source window into temp
-            src_window_rnd_shp = src_window.round_lengths(op="gdal")
-            dst_window_rnd_shp = dst_window.round_lengths(op="gdal")
-            dst_window_rnd_off = dst_window_rnd_shp.round_offsets(op="gdal")
+            src_window_rnd_shp = src_window.round_lengths()
+            dst_window_rnd_shp = dst_window.round_lengths()
+            dst_window_rnd_off = dst_window_rnd_shp.round_offsets()
 
             temp_height, temp_width = (
                 dst_window_rnd_off.height,
